feat: add contacts

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online store | RSS</title>
+  <title>shop-laptop</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="svg/logo.svg">
 </head>
@@ -16,7 +16,7 @@
         <img class="header__icon" src="svg/logo.svg" alt="store logo">
       </a>
       <div class="header__title-wrapper">
-        <h1 class="header__title">Online Store</h1>
+        <h1 class="header__title">shop-laptop</h1>
         <p class="header__subtitle">find your favourite device</p>
       </div>
       <a class="header__link header__link_cart cart" href="#">
@@ -190,12 +190,14 @@
     </main>
 
     <footer class="footer">
-      <a class="footer__link" href="https://github.com/jaysuno0" target="_blank">
-        <img  class="footer__img" src="svg/github.svg" alt="github icon">
+      <a class="footer__link" href="https://t.me/jaysun0" target="_blank">
+        <img class="footer__icon" src="svg/telegram-icon.svg" alt="telegram logo">
       </a>
-      <p class="footer__year">2022</p>
-      <a class="footer__link" href="https://rs.school/js/" target="_blank">
-        <img class="footer__img footer__img_rss" src="svg/rs-school.svg" alt="Rolling Scopes logo">
+      <a class="footer__link" href="https://github.com/jaysun0" target="_blank">
+        <img class="footer__icon" src="svg/github-icon.svg" alt="github logo">
+      </a>
+      <a class="footer__link" href="https://jaysuno0.github.io/rsschool-cv/" target="_blank">
+        <img class="footer__icon" src="svg/page-icon.svg" alt="document logo">
       </a>
     </footer>
   </div>
