feat: add translate button

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
         <img class="header__icon" src="svg/cart.svg" alt="shopping cart icon">
         <p class="cart__count">0</p>
       </a>
+      <button class="header__button header__button_translate">
+        <img class="header__icon" src="svg/translate.svg" alt="translation icon">
+      </button>
     </header>
 
     <main class="main">
