--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <img class="header__icon" src="svg/cart.svg" alt="shopping cart icon">
         <p class="cart__count">0</p>
       </a>
-      <button class="header__button header__button_translate">
+      <button class="header__btn header__btn_translate">
         <img class="header__icon" src="svg/translate.svg" alt="translation icon">
       </button>
     </header>
@@ -115,15 +115,15 @@
             <p class="search__title search__title_size">size</p>
             <div class="checkboxes__item">
               <div class="checkboxes__box" data-value="small"></div>
-              <p class="checkboxes__title">small (12-14 inch)</p>
+              <p class="checkboxes__title checkboxes__title_small">small (12-14")</p>
             </div>
             <div class="checkboxes__item">
               <div class="checkboxes__box" data-value="medium"></div>
-              <p class="checkboxes__title">medium (14-16 inch)</p>
+              <p class="checkboxes__title checkboxes__title_medium">medium (14-16")</p>
             </div>
             <div class="checkboxes__item">
               <div class="checkboxes__box" data-value="large"></div>
-              <p class="checkboxes__title">large (16-18 inch)</p>
+              <p class="checkboxes__title checkboxes__title_large">large (16-18")</p>
             </div>
           </div>
   
