feat: add message translate

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
       <template id="main-message" class="message">
         <div class="message__container">
           <div class="message__wrapper">
-            <p class="message__title">message</p>
+            <p class="message__title"></p>
             <p class="message__text"></p>
           </div>
         </div>
