feat: translate card labels

--- a/src/index.html
+++ b/src/index.html
@@ -160,24 +160,31 @@
             <img class="goods__card-img" src="" alt="laptop image">
           </div>
 
-          <p class="goods__feature goods__feature_in-stock"> in stock
+          <div class="goods__feature-wrapper">
+            <p class="goods__feature goods__feature-label_in-stock">in stock</p>
             <span class="goods__feature_stock"></span>
-          </p>
-          <p class="goods__feature goods__feature_release-year"> release year
+          </div>
+          <div class="goods__feature-wrapper">
+            <p class="goods__feature goods__feature-label_release-year">release year</p>
             <span class="goods__feature_year"></span>
-          </p>
-          <p class="goods__feature goods__feature_size"> size
+          </div>
+          <div class="goods__feature-wrapper">
+            <p class="goods__feature goods__feature-label_size">size</p>
             <span class="goods__feature_size"></span>
-          </p>
-          <p class="goods__feature goods__feature_color"> color
+          </div>
+          <div class="goods__feature-wrapper">
+            <p class="goods__feature goods__feature-label_color">color</p>
             <span class="goods__feature_color"></span>
-          </p>
-          <p class="goods__feature goods__feature_gaming"> gaming
+          </div>
+          <div class="goods__feature-wrapper">
+            <p class="goods__feature goods__feature-label_gaming">gaming</p>
             <span class="goods__feature_gaming"></span>
-          </p>
-          <p class="goods__feature goods__feature_popular"> popular
+          </div>
+
+          <div class="goods__feature-wrapper">
+            <p class="goods__feature goods__feature-label_popular">popular</p>
             <span class="goods__feature_popular"></span>
-          </p>
+          </div>
         </div>
       </template>
 
