feat: add cart's items counter

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,11 @@
 
     <div class="cart hidden">
       <button class="cart__btn cart__btn_close">×</button>
-      <h2 class="cart__title">Cart</h2>
+      <h2 class="cart__title">Your cart</h2>
+      <p class="cart__counter">
+        <span class="cart__counter-number">0</span>
+        items added
+      </p>
     </div>
 
     <footer class="footer">
