feat: add functional for creating goods cards in the cart

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
         </div>
       </template>
 
-      <template id="main-message" class="message">
+      <template id="main-message" class="template__message">
         <div class="message__container">
           <div class="message__wrapper">
             <p class="message__title"></p>
@@ -205,6 +205,16 @@
         <span class="cart__counter-number">0</span>
         items added
       </p>
+      <div class="cart__items"></div>
+      <template class="template__cart-item">
+        <div class="cart__item cart-item">
+          <img class="cart-item__img " src="" alt="laptop image">
+          <p class="cart-item__color"></p>
+          <p class="cart-item__brand"></p>
+          <p class="cart-item__model"></p>
+          <p class="cart-item__year"></p>
+        </div>
+      </template>
     </div>
 
     <footer class="footer">
