feat: add cart-items' styling

--- a/src/index.html
+++ b/src/index.html
@@ -209,10 +209,14 @@
       <template class="template__cart-item">
         <div class="cart__item cart-item">
           <img class="cart-item__img " src="" alt="laptop image">
-          <p class="cart-item__color"></p>
-          <p class="cart-item__brand"></p>
-          <p class="cart-item__model"></p>
-          <p class="cart-item__year"></p>
+          <div class="cart-item__props">
+            <div class="cart-item__props-wrapper">
+              <p class="cart-item__color"></p>
+              <p class="cart-item__brand"></p>
+            </div>
+            <p class="cart-item__model"></p>
+            <p class="cart-item__year"></p>
+          </div>
         </div>
       </template>
     </div>
