feat: add delete button to cart-items

--- a/src/index.html
+++ b/src/index.html
@@ -208,6 +208,9 @@
       <div class="cart__items"></div>
       <template class="template__cart-item">
         <div class="cart__item cart-item">
+          <button class="cart-item__btn cart-item__btn_delete">
+            <img class="cart-item__btn-icon" src="svg/trash-bin.svg" alt="trash bin icon">
+          </button>
           <img class="cart-item__img " src="" alt="laptop image">
           <div class="cart-item__props">
             <div class="cart-item__props-wrapper">
