feat: add delete functional

--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
 
       <template id="goods-item">
         <div class="goods__card">
-          <img class="goods__card_in-cart" src="svg/cart.svg" alt="cart icon">
+          <img class="goods__icon goods__icon_in-cart" src="svg/cart.svg" alt="cart icon">
           <div class="goods__title">
             <h3 class="goods__brand"></h3>
             <p class="goods__model"></p>
