feat: add cart's translation

--- a/src/index.html
+++ b/src/index.html
@@ -201,10 +201,10 @@
     <div class="cart hidden">
       <button class="cart__btn cart__btn_close">×</button>
       <h2 class="cart__title">Your cart</h2>
-      <p class="cart__counter">
-        <span class="cart__counter-number">0</span>
-        items added
-      </p>
+      <div class="cart__counter">
+        <p class="cart__counter-text">items added</p>
+        <p class="cart__counter-number">0</p>
+      </div>
       <div class="cart__items"></div>
       <template class="template__cart-item">
         <div class="cart__item cart-item">
