fix: cart items translation

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,11 @@
       <section class="search">
         <div class="search__wrapper">
           <div class="search__part">
-            <label class="search__label label" for="search">
-              <p class="search__title search__title_search">search</p>
-              <div class="input-wrapper">
-                <input class="search_main label__input input" type="text" autocomplete="off" placeholder="brand / model">
-                <img class="search_main-icon input-wrapper__icon" src="svg/search.svg" alt="">
-              </div>
-            </label>
+            <p class="search__title search__title_search">search</p>
+            <div class="input-wrapper">
+              <input class="search_main label__input input" type="text" autocomplete="off" placeholder="brand / model">
+              <img class="search_main-icon input-wrapper__icon" src="svg/search.svg" alt="">
+            </div>
           </div>
             
           <div class="search__sort search__part">
@@ -200,7 +198,7 @@
 
     <div class="cart hidden">
       <button class="cart__btn cart__btn_close">×</button>
-      <h2 class="cart__title">Your cart</h2>
+      <h2 class="cart__title">Cart</h2>
       <div class="cart__counter">
         <p class="cart__counter-text">items added</p>
         <p class="cart__counter-number">0</p>
