feat: add 'add to cart' btn

--- a/src/index.html
+++ b/src/index.html
@@ -183,6 +183,8 @@
             <p class="goods__feature goods__feature-label_popular">popular</p>
             <span class="goods__feature_popular"></span>
           </div>
+
+          <button class="goods__btn goods__btn_add">add to cart</button>
         </div>
       </template>
 
