--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,11 @@
 
       <template id="goods-item">
         <div class="goods__card">
-          <img class="hidden goods__icon goods__icon_in-cart" src="svg/cart.svg" alt="cart icon">
+          <div class="hidden goods__cart-icon-wrapper">
+            <p class="goods__cart-counter">0</p>
+            <img class="goods__icon goods__icon_in-cart" src="svg/cart.svg" alt="cart icon">
+          </div>
+
           <div class="goods__title">
             <h3 class="goods__brand"></h3>
             <p class="goods__model"></p>
