refactor: card and systemMessage naming in files structure

--- a/src/index.html
+++ b/src/index.html
@@ -146,57 +146,57 @@
       <section class="goods">
       </section>
 
-      <template id="goods-item">
-        <div class="goods__card">
-          <div class="hidden goods__cart-icon-wrapper">
-            <p class="goods__cart-counter">1</p>
-            <img class="goods__icon goods__icon_in-cart" src="svg/cart.svg" alt="cart icon">
+      <template id="item-card">
+        <div class="goods__card card">
+          <div class="hidden card__cart-icon-wrapper">
+            <p class="card__cart-counter">1</p>
+            <img class="card__icon card__icon_in-cart" src="svg/cart.svg" alt="cart icon">
           </div>
 
-          <div class="goods__title">
-            <h3 class="goods__brand"></h3>
-            <p class="goods__model"></p>
+          <div class="card__title">
+            <h3 class="card__brand"></h3>
+            <p class="card__model"></p>
           </div>
 
-          <div class="goods__img-wrapper">
-            <img class="goods__card-img" src="" alt="laptop image">
+          <div class="card__img-wrapper">
+            <img class="card__img" src="" alt="laptop image">
           </div>
 
-          <div class="goods__feature-wrapper">
-            <p class="goods__feature goods__feature-label_in-stock">in stock</p>
-            <span class="goods__feature_stock"></span>
+          <div class="card__feature-wrapper">
+            <p class="card__feature card__feature-label_in-stock">in stock</p>
+            <span class="card__feature_stock"></span>
           </div>
-          <div class="goods__feature-wrapper">
-            <p class="goods__feature goods__feature-label_release-year">release year</p>
-            <span class="goods__feature_year"></span>
+          <div class="card__feature-wrapper">
+            <p class="card__feature card__feature-label_release-year">release year</p>
+            <span class="card__feature_year"></span>
           </div>
-          <div class="goods__feature-wrapper">
-            <p class="goods__feature goods__feature-label_size">size</p>
-            <span class="goods__feature_size"></span>
+          <div class="card__feature-wrapper">
+            <p class="card__feature card__feature-label_size">size</p>
+            <span class="card__feature_size"></span>
           </div>
-          <div class="goods__feature-wrapper">
-            <p class="goods__feature goods__feature-label_color">color</p>
-            <span class="goods__feature_color"></span>
+          <div class="card__feature-wrapper">
+            <p class="card__feature card__feature-label_color">color</p>
+            <span class="card__feature_color"></span>
           </div>
-          <div class="goods__feature-wrapper">
-            <p class="goods__feature goods__feature-label_gaming">gaming</p>
-            <span class="goods__feature_gaming"></span>
-          </div>
-
-          <div class="goods__feature-wrapper">
-            <p class="goods__feature goods__feature-label_popular">popular</p>
-            <span class="goods__feature_popular"></span>
+          <div class="card__feature-wrapper">
+            <p class="card__feature card__feature-label_gaming">gaming</p>
+            <span class="card__feature_gaming"></span>
           </div>
 
-          <button class="goods__btn goods__btn_add">add to cart</button>
+          <div class="card__feature-wrapper">
+            <p class="card__feature card__feature-label_popular">popular</p>
+            <span class="card__feature_popular"></span>
+          </div>
+
+          <button class="card__btn card__btn_add">add to cart</button>
         </div>
       </template>
 
-      <template id="main-message" class="template__message">
-        <div class="message__container">
-          <div class="message__wrapper">
-            <p class="message__title"></p>
-            <p class="message__text"></p>
+      <template id="search-message" class="search-message">
+        <div class="search-message__container">
+          <div class="search-message__wrapper">
+            <p class="search-message__title"></p>
+            <p class="search-message__text"></p>
           </div>
         </div>
       </template>
