feat: add checkout btn

--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,11 @@
         <p class="cart__counter-text">items added</p>
         <p class="cart__counter-number">0</p>
       </div>
-      <div class="cart__items"></div>
+      <div class="cart__items">
+        <div class="cart__wrapper cart__wrapper_btn">
+          <button class="cart__btn cart__btn_checkout">checkout</button>
+        </div>
+      </div>
       <template class="template__cart-item">
         <div class="cart__item cart-item">
           <button class="cart-item__btn cart-item__btn_delete">
