feat: add checkout 'form'

--- a/src/index.html
+++ b/src/index.html
@@ -214,6 +214,23 @@
           <button class="cart__btn cart__btn_checkout">checkout</button>
         </div>
       </div>
+      <div class="cart-checkout hidden">
+        <p class="cart-checkout__text">
+          Thank you for your time and for visiting this page. If you have any questions or job offers - contact me, please. Have a nice day :)
+        </p>
+        <div class="cart-checkout__contacts contacts">
+          <a class="contacts__link" href="https://t.me/jaysun0" target="_blank">
+            <img class="contacts__icon" src="svg/telegram-icon.svg" alt="telegram logo">
+          </a>
+          <a class="contacts__link" href="https://github.com/jaysun0" target="_blank">
+            <img class="contacts__icon" src="svg/github-icon.svg" alt="github logo">
+          </a>
+          <a class="contacts__link" href="https://jaysuno0.github.io/rsschool-cv/" target="_blank">
+            <img class="contacts__icon" src="svg/page-icon.svg" alt="document logo">
+          </a>
+        </div>
+        <button class="cart__btn">close</button>
+      </div>
       <template class="template__cart-item">
         <div class="cart__item cart-item">
           <button class="cart-item__btn cart-item__btn_delete">
@@ -237,15 +254,15 @@
       </template>
     </div>
 
-    <footer class="footer">
-      <a class="footer__link" href="https://t.me/jaysun0" target="_blank">
-        <img class="footer__icon" src="svg/telegram-icon.svg" alt="telegram logo">
+    <footer class="footer contacts">
+      <a class="contacts__link" href="https://t.me/jaysun0" target="_blank">
+        <img class="contacts__icon" src="svg/telegram-icon.svg" alt="telegram logo">
       </a>
-      <a class="footer__link" href="https://github.com/jaysun0" target="_blank">
-        <img class="footer__icon" src="svg/github-icon.svg" alt="github logo">
+      <a class="contacts__link" href="https://github.com/jaysun0" target="_blank">
+        <img class="contacts__icon" src="svg/github-icon.svg" alt="github logo">
       </a>
-      <a class="footer__link" href="https://jaysuno0.github.io/rsschool-cv/" target="_blank">
-        <img class="footer__icon" src="svg/page-icon.svg" alt="document logo">
+      <a class="contacts__link" href="https://jaysuno0.github.io/rsschool-cv/" target="_blank">
+        <img class="contacts__icon" src="svg/page-icon.svg" alt="document logo">
       </a>
     </footer>
   </div>
