feat: add checkout functional

--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,7 @@
       </div>
       <div class="cart__items">
         <div class="cart__wrapper cart__wrapper_btn">
-          <button class="cart__btn cart__btn_checkout">checkout</button>
+          <button class="cart__btn cart__btn_checkout-open">checkout</button>
         </div>
       </div>
       <div class="cart-checkout hidden">
@@ -229,7 +229,7 @@
             <img class="contacts__icon" src="svg/page-icon.svg" alt="document logo">
           </a>
         </div>
-        <button class="cart__btn">close</button>
+        <button class="cart__btn cart__btn_checkout-close">close</button>
       </div>
       <template class="template__cart-item">
         <div class="cart__item cart-item">
